...
    return (
        <View style={styles.container}>
            <TouchableOpacity
                onPress={onJump}
                activeOpacity={0.8}
                style={styles.content}
                testID='post_draft.quote.jump_area'
            >
                {Boolean(formattedAuthor) && (
                    <Text style={styles.quoteAuthor}>{formattedAuthor}:</Text>
                )}
                {contentElement}
                {Boolean(displayText) && (
...
                    </Text>
                )}
            </TouchableOpacity>
            <TouchableOpacity
                onPress={onClose}
                style={styles.closeButton}
                testID='post_draft.quote.close.button'
            >
                <CompassIcon
                    name='close'
                    size={18}
                    color={theme.centerChannelColor}
                />
...
