...
            if (isOwnPost) {
                body = (
                    <View style={{flexDirection: 'row', alignItems: 'center'}}>
                        <FormattedText
                            style={style.message}
                            id='mobile.post_body.recalled_self'
                            defaultMessage='你撤回了一条消息'
                        />
                        {canRecallEditPost && (
                            <Pressable onPress={handleReedit}>
                                <Text style={[style.message, {color: theme.buttonBg, marginLeft: 8}]}>
                                    重新编辑
                                </Text>
...
